@@ -160,64 +160,6 @@
                                         <option>West</option>
                                     </select>
                                 </div>
-
-                                <div class="form-group col-sm-12 col-md-4 col-lg-4">
-                                    <label class="control-label" for="">State:</label>
-                                    <select id="address-state" name="address-state" class="form-control street-address">
-                                        <option value="-- Plase Select State --<">-- Plase Select State --</option>
-                                        <option value="AL - Alabama">AL - Alabama</option>
-                                        <option value="AK - Alaska">AK - Alaska</option>
-                                        <option value="AZ - Arizona">AZ - Arizona</option>
-                                        <option value="AR - Arkansas">AR - Arkansas</option>
-                                        <option value="CA - California">CA - California</option>
-                                        <option value="CO - Colorado">CO - Colorado</option>
-                                        <option value="CT - Connecticut">CT - Connecticut</option>
-                                        <option value="DE - Delaware">DE - Delaware</option>
-                                        <option value="DC - District of Columbia">DC - District of Columbia</option>
-                                        <option value="FL - Florida">FL - Florida</option>
-                                        <option value="GA - Georgia">GA - Georgia</option>
-                                        <option value="HI - Hawaii">HI - Hawaii</option>
-                                        <option value="ID - Idaho">ID - Idaho</option>
-                                        <option value="IL - Illinois">IL - Illinois</option>
-                                        <option value="IN - Indiana">IN - Indiana</option>
-                                        <option value="IA - Iowa">IA - Iowa</option>
-                                        <option value="KS - Kansas">KS - Kansas</option>
-                                        <option value="KY - Kentucky">KY - Kentucky</option>
-                                        <option value="LA - Louisiana">LA - Louisiana</option>
-                                        <option value="ME - Maine">ME - Maine</option>
-                                        <option value="MD - Maryland">MD - Maryland</option>
-                                        <option value="MA - Massachusetts">MA - Massachusetts</option>
-                                        <option value="MI - Michigan">MI - Michigan</option>
-                                        <option value="MN - Minnesota">MN - Minnesota</option>
-                                        <option value="MS - Mississippi">MS - Mississippi</option>
-                                        <option value="MO - Missouri">MO - Missouri</option>
-                                        <option value="MT - Montana">MT - Montana</option>
-                                        <option value="NE - Nebraska">NE - Nebraska</option>
-                                        <option value="NV - Nevada">NV - Nevada</option>
-                                        <option value="NH - New Hampshire">NH - New Hampshire</option>
-                                        <option value="NJ - New Jersey">NJ - New Jersey</option>
-                                        <option value="NM - New Mexico">NM - New Mexico</option>
-                                        <option value="NY - New York">NY - New York</option>
-                                        <option value="NC - North Carolina">NC - North Carolina</option>
-                                        <option value="ND - North Dakota">ND - North Dakota</option>
-                                        <option value="OH - Ohio">OH - Ohio</option>
-                                        <option value="OK - Oklahoma">OK - Oklahoma</option>
-                                        <option value="OR - Oregon">OR - Oregon</option>
-                                        <option value="PA - Pennsylvania">PA - Pennsylvania</option>
-                                        <option value="RI - Rhode Island">RI - Rhode Island</option>
-                                        <option value="SC - South Carolina">SC - South Carolina</option>
-                                        <option value="SD - South Dakota">SD - South Dakota</option>
-                                        <option value="TN - Tennessee">TN - Tennessee</option>
-                                        <option value="TX - Texas">TX - Texas</option>
-                                        <option value="UT - Utah">UT - Utah</option>
-                                        <option value="VT - Vermont">VT - Vermont</option>
-                                        <option value="VA - Virginia">VA - Virginia</option>
-                                        <option value="WA - Washington">WA - Washington</option>
-                                        <option value="WV - West Virginia">WV - West Virginia</option>
-                                        <option value="WI - Wisconsin">WI - Wisconsin</option>
-                                        <option value="WY - Wyoming">WY - Wyoming</option>
-                                    </select>
-                                </div>
                             </div>
                         </form>
                     </div>
@@ -235,10 +177,6 @@
                                         <thead class="cf">
                                             <tr>
                                                 <th>Carrier</th>
-                                                <th>Agency</th>
-                                                <th>Line of Business</th>
-                                                <th>Region</th>
-                                                <th>State</th>
                                                 <th class="action">Action</th>
                                             </tr>
                                         </thead>
@@ -246,10 +184,6 @@
 
                                             <tr>
                                                 <td data-title="Carrier">CNA</td>
-                                                <td data-title="Agency">IOA</td>
-                                                <td data-title="Line of Business">Commercial</td>
-                                                <td data-title="Region">Southeast</td>
-                                                <td data-title="State">Florida</td>
                                                 <td data-title="Action" class="actionBtn">
                                                    <div class="btn-cell">
                                                         <a href="carriers.html" class="actionBlue"><i class="fa fa-pencil"></i></a>
@@ -259,10 +193,6 @@
 
                                             <tr>
                                                 <td data-title="Carrier">Nationwide</td>
-                                                <td data-title="Agency">Eagle</td>
-                                                <td data-title="Line of Business">Personal</td>
-                                                <td data-title="Region">Northeast</td>
-                                                <td data-title="State">Florida</td>
                                                 <td data-title="Action" class="actionBtn">
                                                    <div class="btn-cell">
                                                         <a href="carriers.html" class="actionBlue"><i class="fa fa-pencil"></i></a>
@@ -272,10 +202,6 @@
 
                                             <tr>
                                                 <td data-title="Carrier">Hartford</td>
-                                                <td data-title="Agency">IOA National</td>
-                                                <td data-title="Line of Business">Benefits</td>
-                                                <td data-title="Region">Central</td>
-                                                <td data-title="State">Florida</td>
                                                 <td data-title="Action" class="actionBtn">
                                                    <div class="btn-cell">
                                                         <a href="carriers.html" class="actionBlue"><i class="fa fa-pencil"></i></a>
@@ -285,10 +211,6 @@
 
                                             <tr>
                                                 <td data-title="Carrier">Liberty Mutual</td>
-                                                <td data-title="Agency">Eagle</td>
-                                                <td data-title="Line of Business">Personal</td>
-                                                <td data-title="Region">Southwest</td>
-                                                <td data-title="State">Florida</td>
                                                 <td data-title="Action" class="actionBtn">
                                                    <div class="btn-cell">
                                                         <a href="carriers.html" class="actionBlue"><i class="fa fa-pencil"></i></a>
@@ -298,10 +220,6 @@
 
                                             <tr>
                                                 <td data-title="Carrier">Nationwide</td>
-                                                <td data-title="Agency">IOA</td>
-                                                <td data-title="Line of Business">Commercial</td>
-                                                <td data-title="Region">Soutwest</td>
-                                                <td data-title="State">Florida</td>
                                                 <td data-title="Action" class="actionBtn">
                                                    <div class="btn-cell">
                                                         <a href="carriers.html" class="actionBlue"><i class="fa fa-pencil"></i></a>
