@@ -129,6 +129,15 @@
                             <input id="" name="" class="form-control input-md" value="Hartford" type="text">
                         </div>
 
+                        <div class="form col-sm-12 col-md-12 col-lg-3">
+                            <label class="required control-label" for="">Line of Business</label>
+                            <select data-placeholder=" " multiple class="chosen-select-width" tabindex="16">
+                                <option>Commercial</option>
+                                <option>Personal</option>
+                                <option>Benefits</option>
+                            </select>
+                        </div>
+
                     </fieldset>
                 </form>
 
